fix: replace Next.js Image with picture/img for logo, fix logo not showing

--- a/app/globals.css
+++ b/app/globals.css
@@ -67,7 +67,7 @@ html {
 }
 
 .navbar-logo img {
-  height: 40px;
+  height: 36px;
   width: auto;
 }
 
